More spacing fixes and quick edits to old blog posts

--- a/_sass/layouts/_masthead.scss
+++ b/_sass/layouts/_masthead.scss
@@ -5,9 +5,6 @@
 .masthead {
   margin: 3rem 0;
   @include clearfix;
-  @include media($phablet) {
-    margin-top: 0;
-  }
   .wrap {
     text-align: center;
     max-width: em(440);
